force-app/main/default/objects/Speaker__c/Speaker__c.object-meta.xml
<CustomObject>
    <label>Speaker</label>
    <nameField>
        <displayFormat>Speaker-{0000}</displayFormat>
        <label>Speaker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>