force-app/main/default/objects/Speaker__c/fields/Release_Form__c.field-meta.xml
<CustomField>
    <fullName>Release_Form__c</fullName>
    <label>Release Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Received - Yes</fullName>
            </value>
            <value>
                <fullName>Received - No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>