force-app/main/default/objects/Speaker__c/fields/Speak_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Speak_Hierarchy__c</fullName>
    <label>Speak Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>