force-app/main/default/objects/Speaker__c/fields/Speaker_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Display_Name__c</fullName>
    <formula>Speaker_Contact__r.FirstName &amp; &quot; &quot; &amp;  Speaker_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speaker Display Name</label>
    <type>Text</type>
</CustomField>