force-app/main/default/objects/Speaker__c/fields/Speaker_Image__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Image__c</fullName>
    <label>Speaker Image</label>
    <type>Url</type>
</CustomField>