force-app/main/default/objects/Speaker__c/fields/Speaker_Status__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Status__c</fullName>
    <label>Speaker Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nominated</fullName>
            </value>
            <value>
                <fullName>Self-submitted</fullName>
            </value>
            <value>
                <fullName>Not a good fit</fullName>
            </value>
            <value>
                <fullName>Request - sent</fullName>
            </value>
            <value>
                <fullName>Request - tentative</fullName>
            </value>
            <value>
                <fullName>Request - accepted</fullName>
            </value>
            <value>
                <fullName>Request - declined</fullName>
            </value>
            <value>
                <fullName>Speaker Approved</fullName>
            </value>
            <value>
                <fullName>Confirmation sent</fullName>
            </value>
            <value>
                <fullName>No comp pass</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Ready to Publish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>