force-app/main/default/objects/Speaker__c/fields/Speaker_Type__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Type__c</fullName>
    <label>Speaker Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Speaker</fullName>
            </value>
            <value>
                <fullName>Alumni Speaker</fullName>
            </value>
            <value>
                <fullName>Analyst Speaker</fullName>
            </value>
            <value>
                <fullName>Career Speaker</fullName>
            </value>
            <value>
                <fullName>Celebrity Speaker</fullName>
            </value>
            <value>
                <fullName>Customer Speaker</fullName>
            </value>
            <value>
                <fullName>Industry Speaker</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Keynote Speaker</fullName>
            </value>
            <value>
                <fullName>Panel Member</fullName>
            </value>
            <value>
                <fullName>Panel Speaker</fullName>
            </value>
            <value>
                <fullName>Partner Speaker</fullName>
            </value>
            <value>
                <fullName>Session Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>