force-app/main/default/objects/Speaker__c/fields/Topic_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Topic_Expertise__c</fullName>
    <label>Topic Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Topic 1</fullName>
            </value>
            <value>
                <fullName>Topic 2</fullName>
            </value>
            <value>
                <fullName>Topic 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>