force-app/main/default/objects/Speaker__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Track</label>
    <referenceTo>Track__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>